# bind-rs

./: Cargo.toml  README.md
src/: lib.rs  line.rs  main.rs
tests/: ascii.rs  unicode.rs
